fix: Set flex-wrap when direction is horizontal to avoid x-overflow

--- a/packages/components/src/radio-control/style.scss
+++ b/packages/components/src/radio-control/style.scss
@@ -14,6 +14,7 @@
 .components-radio-control__group-wrapper.is-horizontal {
 	flex-direction: row;
 	justify-content: flex-start;
+	flex-wrap: wrap;
 }
 
 .components-radio-control__option {
